--- a/docs/stylesheets/admonitions.css
+++ b/docs/stylesheets/admonitions.css
@@ -51,3 +51,18 @@
     -webkit-mask-image: var(--md-admonition-icon--pyo3);
             mask-image: var(--md-admonition-icon--pyo3);
   }
+
+.md-typeset .admonition.warning,
+.md-typeset details.warning {
+  border-color: rgb(155, 43, 43);
+}
+.md-typeset .warning > .admonition-title,
+.md-typeset .warning > summary {
+  background-color: rgba(155, 43, 43, 0.1);
+}
+.md-typeset .warning > .admonition-title::before,
+.md-typeset .warning > summary::before {
+  background-color: rgb(155, 43, 43);
+  -webkit-mask-image: var(--md-admonition-icon--warning);
+          mask-image: var(--md-admonition-icon--warning);
+}
